halo header et layout

--- a/src/layouts/SiteLayout.astro
+++ b/src/layouts/SiteLayout.astro
@@ -5,6 +5,7 @@ const {
   description = "",
 } = Astro.props;
 import "@/styles/theme.css";
+import "@/styles/halos.css";
 import "@/styles/badges.css";
 ---
 
